# RTMPDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/example/androidjavatemplate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/java/com/derry/pusher/: AudioChannel.java  CameraHelper.java  DerryPusher.java  MainActivity.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/example/androidjavatemplate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
